[gd_scene load_steps=8 format=3 uid="uid://b2yls8bw43bs0"]

[ext_resource type="Script" path="res://Scripts/forage_npc.gd" id="1_743ij"]
[ext_resource type="Texture2D" uid="uid://d0k4vibananc8" path="res://Art/Characters/NPCs/Old Man.png" id="2_s1y8b"]
[ext_resource type="Texture2D" uid="uid://8viiykyl7sll" path="res://Art/Characters/NPCs/2.png" id="3_t4awp"]
[ext_resource type="AudioStream" uid="uid://c1gi8441cr1uq" path="res://Sounds/Effects/LowSpeech.mp3" id="4_nndi1"]
[ext_resource type="AudioStream" uid="uid://fchyyxjqruwu" path="res://Sounds/Effects/ExPickupSound.mp3" id="5_t5ekc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_it4hd"]
size = Vector2(26, 7)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ach56"]
radius = 53.0769
height = 140.307

[node name="ForageNPC" type="StaticBody2D"]
script = ExtResource("1_743ij")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_s1y8b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 28.5)
shape = SubResource("RectangleShape2D_it4hd")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CapsuleShape2D_ach56")

[node name="TextureRect" type="TextureRect" parent="."]
z_index = 2000
offset_left = 20.0
offset_top = -8.0
offset_right = 225.0
offset_bottom = 86.0
texture = ExtResource("3_t4awp")
flip_v = true

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 18.0
offset_right = 183.0
offset_bottom = 78.0
theme_override_font_sizes/normal_font_size = 10
text = "We saw some of the spirits take a fragment to this area, but none of us can find it!"
tab_size = 3

[node name="TextureRect2" type="TextureRect" parent="."]
z_index = 2000
offset_left = 20.0
offset_top = -8.0
offset_right = 225.0
offset_bottom = 86.0
texture = ExtResource("3_t4awp")
flip_v = true

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect2"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 18.0
offset_right = 183.0
offset_bottom = 78.0
theme_override_font_sizes/normal_font_size = 10
text = "That spirit down there keeps repeating the same cryptic riddle, but I just can't make sense of it."
tab_size = 3

[node name="TextureRect3" type="TextureRect" parent="."]
z_index = 2000
offset_left = 20.0
offset_top = -8.0
offset_right = 225.0
offset_bottom = 86.0
texture = ExtResource("3_t4awp")
flip_v = true

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect3"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 18.0
offset_right = 183.0
offset_bottom = 78.0
theme_override_font_sizes/normal_font_size = 10
text = "I did find this strange yellow rock behind the tree marked '5', though..."
tab_size = 3

[node name="TextureRect4" type="TextureRect" parent="."]
z_index = 2000
offset_left = 20.0
offset_top = -8.0
offset_right = 225.0
offset_bottom = 86.0
texture = ExtResource("3_t4awp")
flip_v = true

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect4"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 18.0
offset_right = 183.0
offset_bottom = 78.0
theme_override_font_sizes/normal_font_size = 10
text = "I wonder what the numbers on the trees have to do with the riddle?"
tab_size = 3

[node name="TextureRect5" type="TextureRect" parent="."]
z_index = 2000
offset_left = 20.0
offset_top = -8.0
offset_right = 225.0
offset_bottom = 86.0
texture = ExtResource("3_t4awp")
flip_v = true

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect5"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 18.0
offset_right = 183.0
offset_bottom = 78.0
theme_override_font_sizes/normal_font_size = 10
text = "You can try your luck but be careful! There's some harmful spirits hiding in the trees. A sword could be quite useful!"
tab_size = 3

[node name="TextureRect6" type="TextureRect" parent="."]
z_index = 2000
offset_left = 20.0
offset_top = -8.0
offset_right = 225.0
offset_bottom = 86.0
texture = ExtResource("3_t4awp")
flip_v = true

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect6"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 18.0
offset_right = 183.0
offset_bottom = 78.0
theme_override_font_sizes/normal_font_size = 10
text = "Wow you solved it! I must've been coming back here thinking about the answer for days now. Thank you!"
tab_size = 3

[node name="TextureRect7" type="TextureRect" parent="."]
z_index = 2000
offset_left = 20.0
offset_top = -8.0
offset_right = 225.0
offset_bottom = 86.0
texture = ExtResource("3_t4awp")
flip_v = true

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect7"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 18.0
offset_right = 183.0
offset_bottom = 78.0
theme_override_font_sizes/normal_font_size = 10
text = "Hey I have the last piece! Come here!"
tab_size = 3

[node name="TextureRect8" type="TextureRect" parent="."]
z_index = 2000
offset_left = 20.0
offset_top = -8.0
offset_right = 225.0
offset_bottom = 86.0
texture = ExtResource("3_t4awp")
flip_v = true

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect8"]
modulate = Color(0, 0, 0, 1)
layout_mode = 0
offset_left = 26.0
offset_top = 18.0
offset_right = 183.0
offset_bottom = 78.0
theme_override_font_sizes/normal_font_size = 10
text = "I had found this yellow thing behind the tree with '5' on it...
I was so lost with that riddle but glad you figured it out!"
tab_size = 3

[node name="InteractLabel" type="Label" parent="."]
z_index = 1000
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -47.0
offset_top = 45.0
offset_right = 72.0
offset_bottom = 68.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.8, 0.8)
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Press 'E' to Talk"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Speech" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_nndi1")
volume_db = -8.0
pitch_scale = 1.5

[node name="PickupSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_t5ekc")
pitch_scale = 3.0

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
